--- a/Innovaccer Assignment.ipynb
+++ b/Innovaccer Assignment.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "s = smtplib.SMTP('smtp.gmail.com', 587) \n",
     "s.starttls() \n",
-    "s.login(\"sendersmailid@gmail.com\",\"@12345abcd\")   #Senders mail ID # created a new email-ID with the same name.The code will run with this email-ID.\n",
+    "s.login(\"sendersmailid@gmail.com\",\"pwd\")   #Senders mail ID # created a new email-ID with the same name.The code will run with this email-ID.\n",
     "messageArr = []\n",
     "message = \"\"\n",
     "\n",
